style.css
/* ... */
.loading-block-row:nth-child(3) .loading-block:nth-child(1){
    width: 80vw;
}
.loading-block-row:nth-child(3) .loading-block:nth-child(2){
    width: 20vw;
}
.loading-block-row:nth-child(4) .loading-block:nth-child(1){
    width: 40vw;
}
.loading-block-row:nth-child(4) .loading-block:nth-child(2){
    width: 60vw;
}
.loading-block-row:nth-child(5) .loading-block:nth-child(1){
    width: 50vw;
}
.loading-block-row:nth-child(5) .loading-block:nth-child(2){
    width: 50vw;
}

#hero-bg-ver-lines, #hero-bg-hor-lines{
    position: absolute;
    top: 0;
    left: 0;
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    height: 100%;
    width: 100%;
    gap: 10px;
    z-index: -1;
}
#hero-bg-ver-lines{
    grid-template-columns: repeat(3, 1fr);
    /* margin: auto; */
}
.hero-bg-line{
    margin: auto;
    /* box-shadow: 0px 0px 5px white; */
}
#hero-bg-hor-lines .hero-bg-line{
    width: 100%;
    height: 2px;
    background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.72), rgba(0, 0, 0, 0));
}
#hero-bg-ver-lines .hero-bg-line{
    height: 98%;
    width: 2px;
    background: linear-gradient(rgba(0, 0, 0, 0), white, rgba(0, 0, 0, 0));
    grid-row: 1 / 4;
}
#hero-bg{
    position: absolute;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    z-index: -1;
    background-image: linear-gradient(10deg, black 40%, rgba(90, 162, 255, 0.35));
    background-size: 150% 150%;
    background-repeat: no-repeat;
    animation: hero-bg 8s infinite ease-in-out;
}
#hero{
    width: 100%;
    height: 100vh;
    /* display: grid; */
    grid-template-rows: 1fr max-content;
}
#dev-tag{
    /* position: absolute;
    bottom: 20px;
    left: 20px; */
    cursor: default;
    display: inline-block;
    border: solid 2px var(--c3);
    border-radius: 100px;
    transition: .4s;
    margin-top: 10px;
    padding: 2px;
    cursor: pointer;
    user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}
#dev-tag:hover{
    padding: 2px 8px;
    background: rgba(var(--c3-rgb), .7);
    border: solid 2px rgba(var(--c3-rgb), 0);
}
#dev-type{
    /* color: rgb(0, 255, 200); */
    color: var(--c3);
    font-size: .8em;
    margin: 0px;
    padding: 5px;
    /* writing-mode: vertical-rl; */
    /* transform:rotate(180deg); */
}
#dev-tag:hover #dev-type{
    color: var(--fg);
}
#hero-content{
    display: inline-block;
    margin: auto 10vw;
    margin-right: 0px;
    width: max-content;
    max-width: 85vw;
    animation: hero-credentials 2s ease-in-out, fade-in 1s ease-out;
}
#greeting, #name, #aka{
    color: white;
    margin: 0px;
    margin-left: 0px;
}
#greeting{
    font-size: 2em;
}
#name{
    font-size: 4em;
}
#aka{
    font-size: 1.8em; 
    color: rgba(255, 255, 255, 0.85);
}
#aka span{
    color: var(--c4);
}
#scroll-down{
    position: absolute;
    bottom: 35px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 1.9em;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: none;
    display: grid;
    background: rgb(0, 255, 195);
    color: rgb(0, 0, 0);
    cursor: pointer;
    text-decoration: none;
    animation: scrollBtn 1.75s ease-in infinite 4s, scrollBtn-fade-in 4s ease-out;
}

.section-title-div-wrapper{
    display: grid;
    width: 100%;
    text-align: center;
    user-select: none   ;
}
.section-title-div{
    display: inline-grid;
    grid-template-columns: 1fr max-content 1fr;
    grid-gap: 25px;
    text-align: center;
    width: 80%;
    margin: 0 auto;
}
.section-title-line{
    height: 1px;
    width: 100%;
    margin: auto;
    animation: widen 1s;
    background: linear-gradient(90deg, var(--c1), rgba(0, 0, 0, 0));
}
.section-title-line:nth-child(1){
    background: linear-gradient(-90deg, var(--c1), rgba(0, 0, 0, 0));
}
.section-title{
    font-size: 2.2em;
    margin: 0px;
    background: linear-gradient(115deg, rgba(var(--c1-rgb), .6), var(--c1) 80%, rgba(var(--c1-rgb), .6));
    background-clip: text;
    color: transparent;
    animation: fade-in 1s;
    text-align: center;
}

#about{
    margin-bottom: 50px;
    padding-top: 40px;
    min-height: 100vh;
    /* display: grid; */
}
#about-content{
    margin: auto;
}
#about-grid{
    display: grid;
    grid-template-columns: 1fr 1.2fr;
    margin: 0 auto;
    margin-top: 7vh;
    gap: 15px;
    width: 80%;
}
#about-desc{
    margin: 0 auto;
    background: linear-gradient(135deg, var(--c2), rgba(var(--c2-rgb), .5) 70%);
    width: calc(100% - 60px);
    padding: 30px 30px;
    /* padding-top: 30px; */
    border-radius: 20px;
    line-height: 23px;
    /* border-bottom-left-radius: 0px; */
    font-size: 1.05em;
}
.about-para span{
    font-weight: 600;
    color: var(--c4);
}
#about-desc-sm-links{
    display: grid;
    grid-template-columns: repeat(3, max-content);
    width: fit-content;
    gap: 20px;
    filter: invert(1);
}
.about-desc-sm-a:hover .about-desc-sm-icon{
    filter: invert(.3);
}
.about-desc-sm-icon{
    width: 25px;
    transition: .3s;
}
#skill-cards{
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
}
.skill-card{
    width: 75%;
    height: 80%;
    margin: auto;
    background: linear-gradient(-45deg, var(--c2), rgba(var(--c2-rgb),.5) 80%);
    padding: 0px 20px;
    padding-right: 0px;
    border-radius: 15px;
    display: grid;
}
.skill-card-inner{
    margin: auto 0;
}
.skill-card-title{
    margin: 0px;
    font-size: 1.6em;
    margin-bottom: 10px;
}
.skill-card-list{
    margin: 0px;
    padding: 0px;
    font-size: 1em;
    display: flex;
    flex-direction: row;
    line-break: anywhere;
    gap: 10px;
    width: fit-content;
    margin-left: 15px;
}
.skill-card-list p{
    margin: auto;
    background: rgba(var(--c1-rgb), .2);
    padding: 3px 10px;
    border-radius: 200px;
    user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

#projects{
    min-height: 100vh;
    padding-top: 40px;
}
/* ... */

